--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-
+<!-- 
+All written by Akram Lagrazna
+-->
 <html>
 <head>
-	<title>test</title>
+	<title>Akram</title>
 <link rel="stylesheet" href='mains.css'>
 <link href="https://fonts.googleapis.com/css?family=Bubbler+One|Overpass" rel="stylesheet">
 </head>
