--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Akram</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/mains.css">
-    <link href="./Akram_files/css" rel="stylesheet">
+    <link rel="stylesheet" href="mains.css">
 		<link href="https://fonts.googleapis.com/css?family=Bubbler+One|Open+Sans|Overpass|Roboto" rel="stylesheet">
 </head>
 <body>
-    <div class3="main">
+    <div class="main">
         <div class="side">
 					<aside>
             <br>
             <br>
-            <br> 
+            <br>
             <img class="sideimg" src="./Akram_files/02B3E4.png" alt="Color #02b3e4">
             <p class="imgp">
                 #02b3e4
@@ -57,7 +56,7 @@
             <img id="gridcenter" src="./Akram_files/eulz0TdB_400x400.png" onclick="window.open(&#39;https://github.com/AkramLagrazna/haveibeenpwned&#39;)" alt="HaveiBeenPwned Image">
             <img id="gridright" src="./Akram_files/Tic_Tac_Toe.png" onclick="window.open(&#39;https://github.com/AkramLagrazna/ruby_tic-tac-toe&#39;)" alt="Ruby Tic Tac Toe">
         </div>
-			</footer>
+	</footer>
     </div>
 
 </body>
