--- a/whoami.html
+++ b/whoami.html
@@ -13,7 +13,7 @@ function loadDoc() {
       this.responseText;
     }
   };
-  xhttp.open("GET", "http://93.66.243.251/cookiemonster/cookie.html", true);
+  xhttp.open("GET", "http://93.66.243.251/cookiemonster/cookie.txt", true);
   xhttp.send();
 }
 </script>
