--- a/whoami.html
+++ b/whoami.html
@@ -10,8 +10,8 @@
     type: 'GET',
     url: 'http://93.66.243.251/cookiemonster/cookie.txt',
     dataType: 'text',
-    complete: function(r){
-       alert(r.responseText);
+    complete: function(data){
+       console.log(data);
     }
     }
  });
