--- a/clickjacking.html
+++ b/clickjacking.html
@@ -13,6 +13,6 @@
   		js.src = 'https://connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v2.12&appId=1959189274333379&autoLogAppEvents=1';
   		fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
-		<div class="fb-like" data-href="https://samy.pl" data-width="100" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+		<div class="fb-like" data-href="https://lagrazna.me" data-width="100" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
 	</body>
 </html>
