--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FTW Website Template</title>
+    <title>Akram Lagrazna</title>
     <link rel="icon" href="./img/favicon.png" type="image/x-icon" />
     <link href="./css/main.css" rel="stylesheet" type="text/css" />
     <script src="./js/polyfills.js"></script>
@@ -13,7 +13,7 @@
 <body>
     <div id="sidenav">
         <button id="sidenavBtn">&#9776;</button>
-        <img id="profilePic" alt="An avatar that aims to represent the website owner" src="https://avatars0.githubusercontent.com/u/17318376?s=300&u=59afee7a033dd7311e41f9c8b99d8abef1555860&v=4">
+        <img id="profilePic" alt="avatar" src="https://avatars0.githubusercontent.com/u/17318376?s=300&u=59afee7a033dd7311e41f9c8b99d8abef1555860&v=4">
     </div>
     <div id="container">
         <div id="output"></div>
