--- a/webapps.html
+++ b/webapps.html
@@ -2,6 +2,8 @@
 <!-- Akram Lagrazna -->
 <html>
 <head>
+        <link rel="manifest" href="afterclass.webmanifest">
+
     <title>After School Club</title> 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script></head>
 
@@ -73,9 +75,17 @@
 
         
         <script src="products.js"></script>
-        <script src="main.js"></script>     
+        <script src="main.js"></script>    
+<style>
+    .product {border: 1px grey solid;padding: 20px;margin: 20px;text-align: center;}
+
+</style>
+<script>
+    if('serviceWorker'in navigator) {    navigator.serviceWorker.register('service-worker.js');};
+</script>
 </div>
 </div>
-</body>
+
+</body> 
 
 </html>
